<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.vitin.burnedcaloriescalculator.activity_burned_calories_calculator">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weight_label"
        android:id="@+id/weight_id"
        android:textStyle="bold"
        android:textSize="20dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="44dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="31dp" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/enter_editText_weight"
        android:layout_alignTop="@+id/weight_id"
        android:layout_toRightOf="@+id/weight_id"
        android:layout_alignRight="@+id/calories_id"
        android:layout_alignEnd="@+id/calories_id" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/miles_amount"
        android:id="@+id/total_milesran_textview"
        android:textSize="20dp"
        android:layout_above="@+id/calories_id"
        android:layout_toRightOf="@+id/calories_id"
        android:layout_toEndOf="@+id/calories_id" />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/miles_ran_label"
        android:id="@+id/miles_id"
        android:textStyle="bold"
        android:textSize="20dp"
        android:layout_marginTop="47dp"
        android:layout_below="@+id/weight_id"
        android:layout_alignStart="@+id/weight_id"
        android:layout_alignLeft="@+id/weight_id" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calories_label"
        android:id="@+id/calories_id"
        android:textStyle="bold"
        android:textSize="20dp"
        android:layout_marginTop="31dp"
        android:layout_below="@+id/miles_id"
        android:layout_alignLeft="@+id/name_id"
        android:layout_alignStart="@+id/name_id" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/height_label"
        android:id="@+id/height_id"
        android:textStyle="bold"
        android:textSize="20dp"
        android:layout_centerVertical="true"
        android:layout_alignRight="@+id/name_id"
        android:layout_alignEnd="@+id/name_id" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bmi_label"
        android:id="@+id/bmi_id"
        android:textStyle="bold"
        android:textSize="20dp"
        android:layout_below="@+id/height_id"
        android:layout_alignRight="@+id/weight_id"
        android:layout_alignEnd="@+id/weight_id"
        android:layout_marginTop="32dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_label"
        android:id="@+id/name_id"
        android:textStyle="bold"
        android:textSize="20dp"
        android:layout_marginTop="37dp"
        android:layout_below="@+id/bmi_id"
        android:layout_alignRight="@+id/bmi_id"
        android:layout_alignEnd="@+id/bmi_id" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/total_caloriesburned"
        android:text="@string/calories_amount"
        android:textSize="20dp"
        android:layout_alignTop="@+id/calories_id"
        android:layout_toRightOf="@+id/total_milesran_textview"
        android:layout_toEndOf="@+id/total_milesran_textview" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/total_amount_height"
        android:text="@string/height_amount"
        android:textSize="20dp"
        android:layout_alignTop="@+id/height_id"
        android:layout_toLeftOf="@+id/result_name"
        android:layout_toStartOf="@+id/result_name" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bmi_amount"
        android:layout_above="@+id/name_id"
        android:layout_toRightOf="@+id/miles_id"
        android:layout_toEndOf="@+id/miles_id"
        android:text="@string/bmi_amount"
        android:textSize="20dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/result_name"
        android:text="@string/enter_name"
        android:layout_alignTop="@+id/name_id"
        android:layout_toRightOf="@+id/bmi_amount"
        android:layout_toEndOf="@+id/bmi_amount" />

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/seekbar_miles_ran"
        android:layout_alignBottom="@+id/total_milesran_textview"
        android:layout_toRightOf="@+id/total_caloriesburned"
        android:layout_toEndOf="@+id/total_caloriesburned"
        android:max="10"
        android:progress="1"
        android:indeterminate="false" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner_feet"
        android:spinnerMode="dropdown"
        android:layout_below="@+id/total_amount_height"
        android:layout_toLeftOf="@+id/result_name"
        android:layout_toStartOf="@+id/result_name" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner_inches"
        android:layout_alignTop="@+id/spinner_feet"
        android:layout_toLeftOf="@+id/total_caloriesburned"
        android:layout_toStartOf="@+id/total_caloriesburned"
        android:spinnerMode="dropdown" />


</RelativeLayout>
